--- a/Vienna/Resources/Base.lproj/Predicates.strings
+++ b/Vienna/Resources/Base.lproj/Predicates.strings
@@ -21,92 +21,12 @@ entries. The format should therefore be as consistent as possible across each
 group of strings.
 */
 
-/* This string is part of a cluster of three strings (all, any and none). The localization should be consistent. */
-"%[All]@ of the following are true" = "Article matches %1$[all]@ of the following conditions";
-/* This string is part of a cluster of three strings (all, any and none). The localization should be consistent. */
-"%[Any]@ of the following are true" = "Article matches %1$[any]@ of the following conditions";
-/* This string is part of a cluster of three strings (all, any and none). The localization should be consistent. */
-"%[None]@ of the following are true" = "Article matches %1$[none]@ of the following conditions";
+"%[Author,Subject,Text]@ %[contains,does not contain]@ %@" = "%1$[Author,Subject,Content]@ %2$[contains,does not contain]@ %3$@";
 
-/* This string is part of a cluster of two strings. The localization should be consistent. */
-"%[Read]@ is %[Yes]@" = "%1$[Is read]@ %2$[Yes]@";
-/* This string is part of a cluster of two strings. The localization should be consistent. */
-"%[Read]@ is %[No]@" = "%1$[Is read]@ %2$[No]@";
+"%[Deleted,Flagged,HasEnclosure,Read]@ is %[No,Yes]@" = "%1$[Is deleted,Is flagged,Has enclosure,Is read]@ %2$[No,Yes]@";
 
-/* This string is part of a cluster of two strings. The localization should be consistent. */
-"%[Flagged]@ is %[Yes]@" = "%1$[Is flagged]@ %2$[Yes]@";
-/* This string is part of a cluster of two strings. The localization should be consistent. */
-"%[Flagged]@ is %[No]@" = "%1$[Is flagged]@ %2$[No]@";
+"%[Author,Folder,Subject,Text]@ %[is,is not]@ %@" = "%1$[Author,Folder,Subject,Content]@ %2$[is,is not]@ %3$@";
 
-/* This string is part of a cluster of two strings. The localization should be consistent. */
-"%[Deleted]@ is %[Yes]@" = "%1$[Is deleted]@ %2$[Yes]@";
-/* This string is part of a cluster of two strings. The localization should be consistent. */
-"%[Deleted]@ is %[No]@" = "%1$[Is deleted]@ %2$[No]@";
+"%[Date]@ %[is,is greater than,is greater than or equal to,is less than,is less than or equal to]@ %[last week,today,yesterday]@" = "%1$[Date]@ %2$[is,is after,is after or is,is before,is before or is]@ %3$[last week,today,yesterday]@";
 
-/* This string is part of a cluster of fifteen strings. The localization should be consistent. */
-"%[Date]@ %[is]@ %[today]@" = "%1$[Date]@ %2$[is]@ %3$[today]@";
-/* This string is part of a cluster of fifteen strings. The localization should be consistent. */
-"%[Date]@ %[is]@ %[yesterday]@" = "%1$[Date]@ %2$[is]@ %3$[yesterday]@";
-/* This string is part of a cluster of fifteen strings. The localization should be consistent. */
-"%[Date]@ %[is]@ %[last week]@" = "%1$[Date]@ %2$[is]@ %3$[last week]@";
-/* This string is part of a cluster of fifteen strings. The localization should be consistent. */
-"%[Date]@ %[is less than]@ %[today]@" = "%1$[Date]@ %2$[is before]@ %3$[today]@";
-/* This string is part of a cluster of fifteen strings. The localization should be consistent. */
-"%[Date]@ %[is less than]@ %[yesterday]@" = "%1$[Date]@ %2$[is before]@ %3$[yesterday]@";
-/* This string is part of a cluster of fifteen strings. The localization should be consistent. */
-"%[Date]@ %[is less than]@ %[last week]@" = "%1$[Date]@ %2$[is before]@ %3$[last week]@";
-/* This string is part of a cluster of fifteen strings. The localization should be consistent. */
-"%[Date]@ %[is less than or equal to]@ %[today]@" = "%1$[Date]@ %2$[is before or is]@ %3$[today]@";
-/* This string is part of a cluster of fifteen strings. The localization should be consistent. */
-"%[Date]@ %[is less than or equal to]@ %[yesterday]@" = "%1$[Date]@ %2$[is before or is]@ %3$[yesterday]@";
-/* This string is part of a cluster of fifteen strings. The localization should be consistent. */
-"%[Date]@ %[is less than or equal to]@ %[last week]@" = "%1$[Date]@ %2$[is before or is]@ %3$[last week]@";
-/* This string is part of a cluster of fifteen strings. The localization should be consistent. */
-"%[Date]@ %[is greater than]@ %[today]@" = "%1$[Date]@ %2$[is after]@ %3$[today]@";
-/* This string is part of a cluster of fifteen strings. The localization should be consistent. */
-"%[Date]@ %[is greater than]@ %[yesterday]@" = "%1$[Date]@ %2$[is after]@ %3$[yesterday]@";
-/* This string is part of a cluster of fifteen strings. The localization should be consistent. */
-"%[Date]@ %[is greater than]@ %[last week]@" = "%1$[Date]@ %2$[is after]@ %3$[last week]@";
-/* This string is part of a cluster of fifteen strings. The localization should be consistent. */
-"%[Date]@ %[is greater than or equal to]@ %[today]@" = "%1$[Date]@ %2$[is after or is]@ %3$[today]@";
-/* This string is part of a cluster of fifteen strings. The localization should be consistent. */
-"%[Date]@ %[is greater than or equal to]@ %[yesterday]@" = "%1$[Date]@ %2$[is after or is]@ %3$[yesterday]@";
-/* This string is part of a cluster of fifteen strings. The localization should be consistent. */
-"%[Date]@ %[is greater than or equal to]@ %[last week]@" = "%1$[Date]@ %2$[is after or is]@ %3$[last week]@";
-
-/* This string is part of a cluster of four strings. The localization should be consistent. */
-"%[Subject]@ %[contains]@ %@" = "%1$[Subject]@ %2$[contains]@ %3$@";
-/* This string is part of a cluster of four strings. The localization should be consistent. */
-"%[Subject]@ %[does not contain]@ %@" = "%1$[Subject]@ %2$[does not contain]@ %3$@";
-/* This string is part of a cluster of four strings. The localization should be consistent. */
-"%[Subject]@ %[is]@ %@" = "%1$[Subject]@ %2$[is]@ %3$@";
-/* This string is part of a cluster of four strings. The localization should be consistent. */
-"%[Subject]@ %[is not]@ %@" = "%1$[Subject]@ %2$[is not]@ %3$@";
-
-/* This string is part of a cluster of four strings. The localization should be consistent. */
-"%[Author]@ %[contains]@ %@" = "%1$[Author]@ %2$[contains]@ %3$@";
-/* This string is part of a cluster of four strings. The localization should be consistent. */
-"%[Author]@ %[does not contain]@ %@" = "%1$[Author]@ %2$[does not contain]@ %3$@";
-/* This string is part of a cluster of four strings. The localization should be consistent. */
-"%[Author]@ %[is]@ %@" = "%1$[Author]@ %2$[is]@ %3$@";
-/* This string is part of a cluster of four strings. The localization should be consistent. */
-"%[Author]@ %[is not]@ %@" = "%1$[Author]@ %2$[is not]@ %3$@";
-
-/* This string is part of a cluster of four strings. The localization should be consistent. */
-"%[Text]@ %[contains]@ %@" = "%1$[Content]@ %2$[contains]@ %3$@";
-/* This string is part of a cluster of four strings. The localization should be consistent. */
-"%[Text]@ %[does not contain]@ %@" = "%1$[Content]@ %2$[does not contain]@ %3$@";
-/* This string is part of a cluster of four strings. The localization should be consistent. */
-"%[Text]@ %[is]@ %@" = "%1$[Content]@ %2$[is]@ %3$@";
-/* This string is part of a cluster of four strings. The localization should be consistent. */
-"%[Text]@ %[is not]@ %@" = "%1$[Content]@ %2$[is not]@ %3$@";
-
-/* This string is part of a cluster of two strings. The localization should be consistent. */
-"%[HasEnclosure]@ is %[Yes]@" = "%1$[Has enclosure]@ %2$[Yes]@";
-/* This string is part of a cluster of two strings. The localization should be consistent. */
-"%[HasEnclosure]@ is %[No]@" = "%1$[Has enclosure]@ %2$[No]@";
-
-/* This string is part of a cluster of two strings. The localization should be consistent. */
-"%[Folder]@ %[is]@ %@" = "%1$[Folder]@ %2$[is]@ %3$@";
-/* This string is part of a cluster of two strings. The localization should be consistent. */
-"%[Folder]@ %[is not]@ %@" = "%1$[Folder]@ %2$[is not]@ %3$@";
+"%[All,Any,None]@ of the following are true" = "Article matches %1$[all,any,none]@ of the following conditions";
