--- a/Vienna/Resources/de.lproj/Predicates.strings
+++ b/Vienna/Resources/de.lproj/Predicates.strings
@@ -1,120 +1,10 @@
-/* This string is part of a cluster of three strings (all, any and none). The localization should be consistent. */
-"%[All]@ of the following are true" = "Artikel erfüllt %1$[alle]@ der folgenden Bedingungen";
 
-/* This string is part of a cluster of three strings (all, any and none). The localization should be consistent. */
-"%[Any]@ of the following are true" = "Artikel erfüllt %1$[beliebige]@ der folgenden Bedingungen";
+"%[All,Any,None]@ of the following are true" = "Artikel erfüllt %1$[alle,beliebige,keine]@ der folgenden Bedingungen";
 
-/* This string is part of a cluster of four strings. The localization should be consistent. */
-"%[Author]@ %[contains]@ %@" = "%1$[Autor]@ %2$[enthält]@ %3$@";
+"%[Deleted,Flagged,HasEnclosure,Read]@ is %[No,Yes]@" = "%1$[Ist gelöscht,Ist markiert,Hat Anhang,Ist gelesen]@ %2$[Nein,Ja]@";
 
-/* This string is part of a cluster of four strings. The localization should be consistent. */
-"%[Author]@ %[does not contain]@ %@" = "%1$[Autor]@ %2$[enthält nicht]@ %3$@";
+"%[Author,Folder,Subject,Text]@ %[is,is not]@ %@" = "%1$[Autor,Ordner,Betreff,Inhalt]@ %2$[ist,ist nicht]@ %3$@";
 
-/* This string is part of a cluster of four strings. The localization should be consistent. */
-"%[Author]@ %[is not]@ %@" = "%1$[Autor]@ %2$[ist nicht]@ %3$@";
+"%[Author,Subject,Text]@ %[contains,does not contain]@ %@" = "%1$[Autor,Betreff,Inhalt]@ %2$[enthält,enthält nicht]@ %3$@";
 
-/* This string is part of a cluster of four strings. The localization should be consistent. */
-"%[Author]@ %[is]@ %@" = "%1$[Autor]@ %2$[ist]@ %3$@";
-
-/* This string is part of a cluster of fifteen strings. The localization should be consistent. */
-"%[Date]@ %[is greater than or equal to]@ %[last week]@" = "%1$[Datum]@ %2$[ist nach oder ist]@ %3$[letzte Woche]@";
-
-/* This string is part of a cluster of fifteen strings. The localization should be consistent. */
-"%[Date]@ %[is greater than or equal to]@ %[today]@" = "%1$[Datum]@ %2$[ist nach oder ist]@ %3$[heute]@";
-
-/* This string is part of a cluster of fifteen strings. The localization should be consistent. */
-"%[Date]@ %[is greater than or equal to]@ %[yesterday]@" = "%1$[Datum]@ %2$[ist nach oder ist]@ %3$[gestern]@";
-
-/* This string is part of a cluster of fifteen strings. The localization should be consistent. */
-"%[Date]@ %[is greater than]@ %[last week]@" = "%1$[Datum]@ %2$[ist nach]@ %3$[letzte Woche]@";
-
-/* This string is part of a cluster of fifteen strings. The localization should be consistent. */
-"%[Date]@ %[is greater than]@ %[today]@" = "%1$[Datum]@ %2$[ist nach]@ %3$[heute]@";
-
-/* This string is part of a cluster of fifteen strings. The localization should be consistent. */
-"%[Date]@ %[is greater than]@ %[yesterday]@" = "%1$[Datum]@ %2$[ist nach]@ %3$[gestern]@";
-
-/* This string is part of a cluster of fifteen strings. The localization should be consistent. */
-"%[Date]@ %[is less than or equal to]@ %[last week]@" = "%1$[Datum]@ %2$[ist vor oder ist]@ %3$[letzte Woche]@";
-
-/* This string is part of a cluster of fifteen strings. The localization should be consistent. */
-"%[Date]@ %[is less than or equal to]@ %[today]@" = "%1$[Datum]@ %2$[ist vor oder ist]@ %3$[heute]@";
-
-/* This string is part of a cluster of fifteen strings. The localization should be consistent. */
-"%[Date]@ %[is less than or equal to]@ %[yesterday]@" = "%1$[Datum]@ %2$[ist vor oder ist]@ %3$[gestern]@";
-
-/* This string is part of a cluster of fifteen strings. The localization should be consistent. */
-"%[Date]@ %[is less than]@ %[last week]@" = "%1$[Datum]@ %2$[ist vor]@ %3$[letzte Woche]@";
-
-/* This string is part of a cluster of fifteen strings. The localization should be consistent. */
-"%[Date]@ %[is less than]@ %[today]@" = "%1$[Datum]@ %2$[ist vor]@ %3$[heute]@";
-
-/* This string is part of a cluster of fifteen strings. The localization should be consistent. */
-"%[Date]@ %[is less than]@ %[yesterday]@" = "%1$[Datum]@ %2$[ist vor]@ %3$[gestern]@";
-
-/* This string is part of a cluster of fifteen strings. The localization should be consistent. */
-"%[Date]@ %[is]@ %[last week]@" = "%1$[Datum]@ %2$[ist]@ %3$[letzte Woche]@";
-
-/* This string is part of a cluster of fifteen strings. The localization should be consistent. */
-"%[Date]@ %[is]@ %[today]@" = "%1$[Datum]@ %2$[ist]@ %3$[heute]@";
-
-/* This string is part of a cluster of fifteen strings. The localization should be consistent. */
-"%[Date]@ %[is]@ %[yesterday]@" = "%1$[Datum]@ %2$[ist]@ %3$[gestern]@";
-
-/* This string is part of a cluster of two strings. The localization should be consistent. */
-"%[Deleted]@ is %[No]@" = "%1$[Ist gelöscht]@ %2$[Nein]@";
-
-/* This string is part of a cluster of two strings. The localization should be consistent. */
-"%[Deleted]@ is %[Yes]@" = "%1$[Ist gelöscht]@ %2$[Ja]@";
-
-/* This string is part of a cluster of two strings. The localization should be consistent. */
-"%[Flagged]@ is %[No]@" = "%1$[Ist markiert]@ %2$[Nein]@";
-
-/* This string is part of a cluster of two strings. The localization should be consistent. */
-"%[Flagged]@ is %[Yes]@" = "%1$[Ist markiert]@ %2$[Ja]@";
-
-/* This string is part of a cluster of two strings. The localization should be consistent. */
-"%[Folder]@ %[is not]@ %@" = "%1$[Ordner]@ %2$[ist nicht]@ %3$@";
-
-/* This string is part of a cluster of two strings. The localization should be consistent. */
-"%[Folder]@ %[is]@ %@" = "%1$[Ordner]@ %2$[ist]@ %3$@";
-
-/* This string is part of a cluster of two strings. The localization should be consistent. */
-"%[HasEnclosure]@ is %[No]@" = "%1$[Hat Anhang]@ %2$[Nein]@";
-
-/* This string is part of a cluster of two strings. The localization should be consistent. */
-"%[HasEnclosure]@ is %[Yes]@" = "%1$[Hat Anhang]@ %2$[Ja]@";
-
-/* This string is part of a cluster of three strings (all, any and none). The localization should be consistent. */
-"%[None]@ of the following are true" = "Artikel erfüllt %1$[keine]@ der folgenden Bedingungen";
-
-/* This string is part of a cluster of two strings. The localization should be consistent. */
-"%[Read]@ is %[No]@" = "%1$[Ist gelesen]@ %2$[Nein]@";
-
-/* This string is part of a cluster of two strings. The localization should be consistent. */
-"%[Read]@ is %[Yes]@" = "%1$[Ist gelesen]@ %2$[Ja]@";
-
-/* This string is part of a cluster of four strings. The localization should be consistent. */
-"%[Subject]@ %[contains]@ %@" = "%1$[Betreff]@ %2$[enthält]@ %3$@";
-
-/* This string is part of a cluster of four strings. The localization should be consistent. */
-"%[Subject]@ %[does not contain]@ %@" = "%1$[Betreff]@ %2$[enthält nicht]@ %3$@";
-
-/* This string is part of a cluster of four strings. The localization should be consistent. */
-"%[Subject]@ %[is not]@ %@" = "%1$[Betreff]@ %2$[ist nicht]@ %3$@";
-
-/* This string is part of a cluster of four strings. The localization should be consistent. */
-"%[Subject]@ %[is]@ %@" = "%1$[Betreff]@ %2$[ist]@ %3$@";
-
-/* This string is part of a cluster of four strings. The localization should be consistent. */
-"%[Text]@ %[contains]@ %@" = "%1$[Inhalt]@ %2$[enthält]@ %3$@";
-
-/* This string is part of a cluster of four strings. The localization should be consistent. */
-"%[Text]@ %[does not contain]@ %@" = "%1$[Inhalt]@ %2$[enthält nicht]@ %3$@";
-
-/* This string is part of a cluster of four strings. The localization should be consistent. */
-"%[Text]@ %[is not]@ %@" = "%1$[Inhalt]@ %2$[ist nicht]@ %3$@";
-
-/* This string is part of a cluster of four strings. The localization should be consistent. */
-"%[Text]@ %[is]@ %@" = "%1$[Inhalt]@ %2$[ist]@ %3$@";
-
+"%[Date]@ %[is,is greater than,is greater than or equal to,is less than,is less than or equal to]@ %[last week,today,yesterday]@" = "%1$[Datum]@ %2$[ist,ist nach,ist nach oder ist,ist vor,ist vor oder ist]@ %3$[letzte Woche,heute,gestern]@";
