--- a/Vienna/Resources/de.lproj/Predicates.strings
+++ b/Vienna/Resources/de.lproj/Predicates.strings
@@ -9,4 +9,4 @@
 
 "%[Date]@ %[is,is greater than,is greater than or equal to,is less than,is less than or equal to]@ %[last week,today,yesterday]@" = "%1$[Datum]@ %2$[ist,ist nach,ist nach oder ist,ist vor,ist vor oder ist]@ %3$[letzte Woche,heute,gestern]@";
 
-"%[Date]@ %[less than ago,more than ago]@ %[days,months,weeks,years]@ %@" = "%1$[Datum]@ %2$[vor weniger als,vor mehr als]@ %4$@ %3$[Tag(en),Monat(en),Woche(n),Jahr(en)]@";
+"%[Date]@ %[less than ago,more than ago]@ %[minutes,hours,days,months,weeks,years]@ %@" = "%1$[Datum]@ %2$[vor weniger als,vor mehr als]@ %4$@ %3$[Minute(n),Stunde(n),Tag(en),Monat(en),Woche(n),Jahr(en)]@";
